# bic-dmdul

./: .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml
docs/: AI_CODING_DEVELOPMENT_GUIDE.md  BIC_DMDUL_E2E_TEST_PLAN_CN.md  BIC_DMDUL_E2E_TEST_PLAN_EN.md  BLOG_BIC_DMDUL_OPEN_SOURCE_CN.md  DM8_BOOTSTRAP_STANDARD_TABLE_DOWNLOAD.md  DM8_DUMP_TYPE_CALIBRATION_2026-07-01.md  DM8_PAGE_STRUCTURE_NOTES.md  DM8_STORAGE_ARCHITECTURE_NOTES.md  DM8_STORAGE_FORMAT_SUMMARY_2026-07-03_CN.md  DM8_TYPE_STORAGE_NOTES.md  EVIDENCE_CAPTURE_WORKFLOW.md  EXPLORATION_PLAN.md  EXPLORATION_TASKS.md  FOUNDATIONAL_RESEARCH_PLAN.md  PROJECT_GOAL.md  README.md  README_CN.md  README_EN.md  STORAGE_EXPLORATION_2026-06-29.md  TECHNICAL_EXPLORATION_ROADMAP.md  TEST_ENVIRONMENT.md  USER_MANUAL_CN.md
docs/templates/: evidence_manifest.json
fixtures/sql/: 001_foundational_storage.sql  002_reference_queries.sql  003_control_file_layout.sql  README.md
releases/: README.md  bic-dmdul-0.1.0.tar.gz.sha256
src/dmdul/: __init__.py  block.py  bootstrap.py  cli.py  control_file.py  control_map.py  database_summary.py  decode.py  discovery.py  dul_config.py  evidence.py  extract.py  (+11 more)
tests/: test_block.py  test_bootstrap.py  test_cli.py  test_control_file.py  test_database_summary.py  test_decode.py  test_discovery.py  test_evidence.py  test_extract.py  test_lob.py  test_metadata.py  test_page.py  test_page_catalog.py  test_preflight.py  test_resolver.py  test_row.py  test_row_archive.py  test_segment.py  test_storage.py  test_sysdict.py  test_type_storage_evidence.py
tools/: build_release.sh
